Fixed resolver behaviour when sub-commands return errors.